Transferencia de repositorio final

--- a/elementos/src/main/webapp/WEB-INF/web.xml
+++ b/elementos/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>elementos</display-name>
+    <servlet>
+        <servlet-name>ServletAutenticar</servlet-name>
+        <servlet-class>com.unitec.elementos.ServletAutenticar</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ServletGuardarUsuario</servlet-name>
+        <servlet-class>com.unitec.elementos.ServletGuardarUsuario</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ServletHola</servlet-name>
+        <servlet-class>com.unitec.elementos.ServletHola</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletAutenticar</servlet-name>
+        <url-pattern>/autenticar</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletGuardarUsuario</servlet-name>
+        <url-pattern>/guardarusuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletHola</servlet-name>
+        <url-pattern>/Servilleta</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -8,5 +32,5 @@
     </session-config>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
-        </welcome-file-list>
-    </web-app>
+    </welcome-file-list>
+</web-app>
